# DisputeForge

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  dispute_architecture.md  pyproject.toml
dashboard/: app.js  dashboard.js  data.js  index.html  styles.css
data/policy/: 1005.txt
docs/harness/: dispute_architecture.md
eval/: ablation.py  ablation_chart.py  runner.py  tradeoffs.md
eval/golden_traces/: adversarial.json  adversarial_jailbreak.json  atm_unauthorized_large.json  atm_unauthorized_small.json  canceled_subscription.json  card_not_present_large.json  card_not_present_small.json  duplicate_large.json  fraud_clearcut.json  late_report_reasonable.json  non_receipt_large.json  non_receipt_small.json  over_threshold_fraud.json  recognized_after_all.json
eval/rubrics/: default.md  dispute_reg_e.md
eval/test_cases/: disputes.jsonl  disputes_new12.jsonl
flat/: app.js  data.js  index.html  styles.css
harness/: __init__.py
harness/context/: __init__.py  builder.py
harness/evaluation/: __init__.py  dispute_verifier.py  verifier.py
harness/guardrails/: __init__.py  hooks.py
harness/memory/: __init__.py  checkpoint.py
harness/orchestration/: __init__.py  retry.py
harness/tools/: __init__.py  base.py
scripts/: build_dashboard.py  dashboard_server.py  demo.py  inject_failure.py  setup_env.sh  verify_keys.py
src/agent/: __init__.py  compliance.py  graph.py  nodes.py  state.py
src/tools/: __init__.py  dispute_tools.py  nessie.py  policy_rag.py
tests/: test_harness.py  test_nodes.py
tests/eval/: test_dispute_verifier.py  test_golden_regression.py
