[project]
name = "disputeforge"
version = "0.1.0"
description = "Regulation E dispute resolution agent"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Model providers
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    # Core utilities
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "tenacity>=9.0.0",
    # Search
    "tavily-python>=0.5.0",
    # RAG / vector
    "chromadb>=0.5.0",
    # LlamaIndex stack
    "llama-index>=0.12.0",
    "llama-index-core>=0.12.0",
    "llama-index-llms-anthropic>=0.6.0",
    "llama-index-vector-stores-chroma>=0.4.0",
    "llama-parse>=0.5.0",
    # Observability
    "langfuse>=2.50.0",
    # Eval runner
    "rich>=13.0.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
    # LangGraph
langgraph = [
    "langgraph>=0.2.50",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
]
    # Claude Agent SDK
claude-sdk = [
    "claude-agent-sdk>=0.1.0",
    "inspect-ai>=0.3.0",
]
# Eval
eval = [
    "deepeval>=1.5.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
# Dashboard server — live dispute submission + SSE streaming to the browser UI
dashboard = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=2.0.0",
]
# Dev
dev = [
    "ruff>=0.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "ARG"]
ignore = ["E501"]  # allow long lines in prompts

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "harness"]
